--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  </div>
 	</fieldset>
 	<input type="hidden" name="hidden_field" value="AldenDeHaan">
-	<input type="Submit Query">
+	<input type="submit" value="Submit Query">
   </form>
 </body>
 </html>
