--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	  <legend>My Info</legend>
 	  <div><label> first name: <input size="100" type="text" name="first_name_field"></label></div>
 	  <div><label> last name: <input size="100" type="text" name="last_name_field"></label></div>
-	  <div><label> phone number: <input size="100" type="text" name="phone_number_field"></label></div>
-	  <div><label> email address: <input size="100" type="text" name="email_address_field"></label></div>
+	  <div><label> phone number: <input size="100" type="text" name="phone_field"></label></div>
+	  <div><label> email address: <input size="100" type="text" name="email_field"></label></div>
 	  <divGender: </div>
 	  <div>
 	    <label> Male <input type="radio" name="gender_field" value="male"></label>
