--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  <div><label> last name: <input size="100" type="text" name="last_name_field"></label></div>
 	  <div><label> phone number: <input size="100" type="text" name="phone_field"></label></div>
 	  <div><label> email address: <input size="100" type="text" name="email_field"></label></div>
-	  <divGender: </div>
+	  <div>Gender: </div>
 	  <div>
 	    <label> Male <input type="radio" name="gender_field" value="male"></label>
 		<label> female <input type="radio" name="gender_field" value="female"></label>
