--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	  <div>Gender: </div>
 	  <div>
 	    <label> Male <input type="radio" name="gender_field" value="male"></label>
-		<label> female <input type="radio" name="gender_field" value="female"></label>
-		<label> other <input type="radio" name="gender_field" value="other"></label>
+		<label> Female <input type="radio" name="gender_field" value="female"></label>
+		<label> Other <input type="radio" name="gender_field" value="other"></label>
 	  </div>
 	  <div>Age: </div>
 	  <select name="age_field">
